force-app/main/default/objects/Concur_Prov_Connector__c/fields/Enable_Debug_Loging__c.field-meta.xml
<CustomField>
    <fullName>Enable_Debug_Loging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable debug logging for all plugins in the Concur connector.</description>
    <inlineHelpText>Enable debug logging for all plugins in the Concur connector.</inlineHelpText>
    <label>Enable Debug Logging</label>
    <type>Checkbox</type>
</CustomField>