force-app/main/default/objects/Concur_Prov_Connector__c/fields/User_Endpoint_v1_0__c.field-meta.xml
<CustomField>
    <fullName>User_Endpoint_v1_0__c</fullName>
    <defaultValue>&quot;https://www.concursolutions.com/api/user/v1.0/&quot;</defaultValue>
    <description>URL for the User endpoint in v1.0 of the Concur API.</description>
    <inlineHelpText>URL for the User endpoint in v1.0 of the Concur API.</inlineHelpText>
    <label>User Endpoint v1.0</label>
    <required>true</required>
    <type>Url</type>
</CustomField>