force-app/main/default/objects/Concur_Prov_Connector__c/fields/User_Endpoint_v3_0__c.field-meta.xml
<CustomField>
    <fullName>User_Endpoint_v3_0__c</fullName>
    <defaultValue>&quot;https://www.concursolutions.com/api/v3.0/common/users&quot;</defaultValue>
    <description>URL for the User endpoint in v3.0 of the Concur API.</description>
    <inlineHelpText>URL for the User endpoint in v3.0 of the Concur API.</inlineHelpText>
    <label>User Endpoint v3.0</label>
    <required>true</required>
    <type>Url</type>
</CustomField>